--- a/PureToneAudiometer/Views/Start/HelpPageView.xaml
+++ b/PureToneAudiometer/Views/Start/HelpPageView.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="PureToneAudiometer.Views.SettingsPageView"
+    x:Class="PureToneAudiometer.Views.Start.HelpPageView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -10,10 +10,10 @@
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="PortraitOrLandscape" Orientation="Portrait"
+    SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
-    
+
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
             <toolkit:NavigationInTransition.Backward>
@@ -34,7 +34,7 @@
             </toolkit:NavigationOutTransition.Forward>
         </toolkit:NavigationOutTransition>
     </toolkit:TransitionService.NavigationOutTransition>
-
+    
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
@@ -45,48 +45,55 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="PURE TONE AUDIOMETER" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="settings" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="help" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <StackPanel Orientation="Vertical"
-                        Grid.Row="0">
-                <StackPanel Orientation="Horizontal"
-                            Margin="0,10,0,10">
-                    <TextBlock Text="Max volume:" VerticalAlignment="Center"/>
-                    <TextBox Text="{Binding MaxVolume, Mode=TwoWay}" 
-                             MinWidth="100" 
-                             VerticalAlignment="Center"/>
-                    <TextBlock Text="[dB]" VerticalAlignment="Center"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" 
-                            Margin="0,10,0,10">
-                    <TextBlock Text="Upload graphs to Skydrive: " 
-                               VerticalAlignment="Center"/>
-                    <CheckBox IsChecked="{Binding ShouldUploadPlots, Mode=TwoWay}"/>
-                </StackPanel>
+            <StackPanel Orientation="Vertical">
+                <RichTextBox Margin="0,0,0,20"
+                             VerticalScrollBarVisibility="Auto"
+                             IsReadOnly="True">
+                    <Paragraph FontSize="{StaticResource PhoneFontSizeMediumLarge}">
+                        <Bold Foreground="Red">
+                        Disclaimer: 
+                        </Bold>
+                        <Run></Run>
+                        <Run FontWeight="Normal"
+                             FontSize="{StaticResource PhoneFontSizeMedium}"
+                             Foreground="{StaticResource PhoneForegroundBrush}">
+                        This application is not intended to be used as a clinical application.
+                        The author cannot accept responsibility for any clinical diagnoses or decisions
+                        made on the basis of this program.
+                        </Run>
+                    </Paragraph>
+                    
+                    
+                </RichTextBox>
                 
-                <StackPanel Orientation="Horizontal"
-                            Margin="0,10,0,10">
-                    <TextBlock Text="Recent items shown: " 
-                               VerticalAlignment="Center"/>
-                    <toolkit:ListPicker ItemsSource="{Binding RecentItems}" 
-                                        Width="200"
-                                        SelectedItem="{Binding RecentItemsShown, Mode=TwoWay}"/>
-                </StackPanel>
+                <RichTextBox FontSize="{StaticResource PhoneFontSizeNormal}"
+                             IsReadOnly="True"
+                             VerticalScrollBarVisibility="Auto"
+                             Foreground="{StaticResource PhoneBorderBrush}">
+                    <Paragraph Foreground="{StaticResource PhoneAccentBrush}"
+                               FontSize="{StaticResource PhoneFontSizeMediumLarge}">
+                        Hints:
+                    </Paragraph>
+                    <Paragraph>
+                        - Make sure your hardware phone volume is turned up to the maximum.
+                        Remember to turn it back down after you're done using the application!
+                    </Paragraph>
+                    <Paragraph>
+                        - The default maximum volume is capped at 100 dB. If you're
+                        <Bold>sure</Bold> that your phone has
+                        higher volume upper limit, you can change it on the 'Settings' screen.
+                    </Paragraph>
+                    <Paragraph>
+                        - If you want to send not only your data, but also the HTML (SVG) graphs to SkyDrive, make sure
+                        to check the checkbox on the 'Settings' screen.
+                    </Paragraph>
+                </RichTextBox>
             </StackPanel>
-            <Button Grid.Row="1" 
-                    Width="250"
-                    Name="ClearSettings"
-                    Content="Clear all settings" 
-                    Margin="0,10,0,45"
-                    VerticalAlignment="Bottom"/>
-                
         </Grid>
     </Grid>
 
