Small, last-minute bugfixes:
- Canceling 'Discard' on the results screen should really cancel it.
- There's a notification added for bound property on volume-down button when changing frequencies
- 'Show recent' list on Settings screen should now have much bigger font
- The 'LastUsedDate' should always get updated when a preset is selected from the main screen

--- a/PureToneAudiometer/Views/SettingsPageView.xaml
+++ b/PureToneAudiometer/Views/SettingsPageView.xaml
@@ -77,7 +77,13 @@
                                VerticalAlignment="Center"/>
                     <toolkit:ListPicker ItemsSource="{Binding RecentItems}" 
                                         Width="200"
-                                        SelectedItem="{Binding RecentItemsShown, Mode=TwoWay}"/>
+                                        SelectedItem="{Binding RecentItemsShown, Mode=TwoWay}">
+                        <toolkit:ListPicker.FullModeItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Style="{StaticResource PhoneTextLargeStyle}" Text="{Binding}"/>
+                            </DataTemplate>
+                        </toolkit:ListPicker.FullModeItemTemplate>
+                    </toolkit:ListPicker>
                 </StackPanel>
             </StackPanel>
             <Button Grid.Row="1" 
